# MOCRAP3000

./: CMakeLists.txt  README.md
cmake/libdxfrw_patch/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  geneticoptimizer.cpp  geneticoptimizer.h  geometry.cpp  geometry.h  geometryadapter.cpp  geometryadapter.h  geometrynormalizer.cpp  geometrynormalizer.h  geometryutils.cpp  geometryutils.h  inputmanager.cpp  inputmanager.h  layoutoptimizer.cpp  layoutoptimizer.h  layoutstructures.cpp  layoutstructures.h  nfpcalculator.cpp  nfpcalculator.h  optimizationworker.cpp  optimizationworker.h  outputmanager.cpp  outputmanager.h
src/io/: CMakeLists.txt  dxfexporter.cpp  dxfexporter.h  dxfreader.cpp  dxfreader.h
src/ui/: CMakeLists.txt  geometrypainter.cpp  geometrypainter.h  layoutviewerwidget.cpp  layoutviewerwidget.h  mainwindow.cpp  mainwindow.h  parameterswidget.cpp  parameterswidget.h  partlistwidget.cpp  partlistwidget.h  sheetlistwidget.cpp  sheetlistwidget.h  viewerwidget.cpp  viewerwidget.h
